--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ body .about .leaf-left {
 
 body .projects-main {
   text-align: center;
-  padding: 50px 8%;
+  padding: 50px 4%;
   position: relative;
 }
 
@@ -375,12 +375,11 @@ body .projects-main .my-projects .project-block {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   width: 90%;
-  padding: 60px 0;
-  margin-bottom: 30px;
+  padding: 15px 40px;
+  margin-bottom: 70px;
 }
 
 body .projects-main .my-projects .project-block .hover_place {
@@ -390,6 +389,7 @@ body .projects-main .my-projects .project-block .hover_place {
   transition: transform .6s;
   transition: transform .6s, -webkit-transform .6s;
   cursor: pointer;
+  z-index: 999;
 }
 
 body .projects-main .my-projects .project-block .hover_place .imge {
