--- a/css/style.scss
+++ b/css/style.scss
@@ -313,7 +313,7 @@ body
     .projects-main 
     {
         text-align: center;
-        padding: 50px 8%;
+        padding: 50px 4%;
         position: relative;
         .leaf-right,.leaf-left
         {
@@ -381,15 +381,16 @@ body
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                justify-content: space-between;
+                justify-content: space-around;
                 width: 90%;
-                padding: 60px 0;
-                margin-bottom: 30px ;
+                padding: 15px 40px;
+                margin-bottom: 70px ;
                 .hover_place
                 {
                     width: 35%;
                     transition: transform .6s;
                     cursor: pointer;
+                    z-index: 999;
                     .imge 
                     {
                         width: 100%;
