--- a/css/style.scss
+++ b/css/style.scss
@@ -608,6 +608,10 @@ body
                                         {
                                             background-color: #E34C26;
                                         }
+                                        .scss
+                                        {
+                                            background-color: #C6538C;
+                                        }
                                         .css
                                         {
                                             background-color: #563D7C;
