--- a/css/style.scss
+++ b/css/style.scss
@@ -822,7 +822,7 @@ body
     // right: 0;
     // bottom: 0;
     // pointer-events: none;
-    background-image: url('http://www.mcctours.com.my/wp-content/uploads/2018/01/sakura-1-1.png'), url('http://www.mcctours.com.my/wp-content/uploads/2018/01/sakura-2.png');
+    background-image: url('../img/sakura-1-1.png'), url('../img/sakura-2.png');
     animation: snow 20s linear infinite;
  }
 
