--- a/css/sakura.css
+++ b/css/sakura.css
@@ -11,6 +11,7 @@
 #sakura {
   background-image: url("../img/sakura2in2.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
   background-image: url("../img/sakura2in2.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
+  background-attachment: fixed;
 }
 
 #sakura .ml16 i {
@@ -20,6 +21,7 @@
 .flip-content-back {
   background-image: url("../img/sakura2in2.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
   background-image: url("../img/sakura2in2.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
+  background-attachment: fixed;
   background-size: cover;
   background-position: center center;
 }
@@ -30,6 +32,7 @@
 
 .contact-me {
   background-image: url("../img/sakura2.jpg");
+  background-attachment: fixed;
   border-top: 10px solid #ffb9c8;
   border-bottom: 10px solid #ffb9c8;
 }
