--- a/css/ocean.css
+++ b/css/ocean.css
@@ -11,6 +11,7 @@
 #sakura {
   background-image: url("../img/ocean-1.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
   background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
+  background-attachment: fixed;
 }
 
 #sakura .snow-bg {
@@ -26,6 +27,7 @@
   background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
   background-size: cover;
   background-position: center center;
+  background-attachment: fixed;
 }
 
 .flip-content-back ul li:hover {
@@ -37,6 +39,7 @@
   background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
   border-top: 10px solid #77bbe8;
   border-bottom: 10px solid #77bbe8;
+  background-attachment: fixed;
 }
 
 .contact-me button {
