--- a/css/ocean.scss
+++ b/css/ocean.scss
@@ -14,6 +14,7 @@ $theme_color : rgba(119,187,232,1);
 #sakura
 {
     background-image: url('../img/ocean-1.jpg'), linear-gradient(#D0E5F3, #B7D7EC);
+    background-attachment: fixed;
     .snow-bg
     {
         display: none;
@@ -32,6 +33,7 @@ $theme_color : rgba(119,187,232,1);
     background-image: url('../img/ocean-1.jpg'), linear-gradient(#D0E5F3, #B7D7EC);
     background-size: cover;
     background-position: center center;
+    background-attachment: fixed;
     
     ul
     {
@@ -49,6 +51,7 @@ $theme_color : rgba(119,187,232,1);
     background-image: url('../img/ocean-1.jpg'), linear-gradient(#D0E5F3, #B7D7EC);
     border-top: 10px solid $theme_color;
     border-bottom: 10px solid $theme_color;
+    background-attachment: fixed;
     button
     {
         background-color: $theme_color;
