ocean theme update

--- a/css/ocean.css
+++ b/css/ocean.css
@@ -1,16 +1,17 @@
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #77bbe8;
+  background: rgb(56, 171, 139);
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #77bbe8;
+  background: rgb(56, 171, 139);
 }
 
 #sakura {
-  background-image: url("../img/ocean-1.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
-  background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
+  background-image: url('../img/ocean-1.jpg'),
+    -webkit-gradient(linear, left top, left bottom, from(#d0e5f3), to(#b7d7ec));
+  background-image: url('../img/ocean-1.jpg'), linear-gradient(#d0e5f3, #b7d7ec);
   background-attachment: fixed;
 }
 
@@ -19,12 +20,13 @@
 }
 
 #sakura .ml16 i {
-  color: #77bbe8;
+  color: rgb(56, 171, 139);
 }
 
 .flip-content-back {
-  background-image: url("../img/ocean-1.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
-  background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
+  background-image: url('../img/ocean-1.jpg'),
+    -webkit-gradient(linear, left top, left bottom, from(#d0e5f3), to(#b7d7ec));
+  background-image: url('../img/ocean-1.jpg'), linear-gradient(#d0e5f3, #b7d7ec);
   background-size: cover;
   background-position: center center;
   background-attachment: fixed;
@@ -35,69 +37,94 @@
 }
 
 .contact-me {
-  background-image: url("../img/ocean-1.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
-  background-image: url("../img/ocean-1.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
-  border-top: 10px solid #77bbe8;
-  border-bottom: 10px solid #77bbe8;
+  background-image: url('../img/ocean-1.jpg'),
+    -webkit-gradient(linear, left top, left bottom, from(#d0e5f3), to(#b7d7ec));
+  background-image: url('../img/ocean-1.jpg'), linear-gradient(#d0e5f3, #b7d7ec);
+  border-top: 10px solid rgb(56, 171, 139);
+  border-bottom: 10px solid rgb(56, 171, 139);
   background-attachment: fixed;
 }
 
 .contact-me button {
-  background-color: #77bbe8;
+  background-color: rgb(56, 171, 139);
 }
 
 footer .footer-dark ul li::after {
-  color: #77bbe8;
+  color: rgb(56, 171, 139);
 }
 
 .modal-footer .btn {
-  background-color: #77bbe8;
+  background-color: rgb(56, 171, 139);
 }
 
 #the_waves {
   display: block;
 }
 
+.the-boat {
+  background-image: url('../img/boat.png');
+  background-size: auto 100%;
+  width: 26px;
+  height: 75px;
+  position: absolute;
+  top: 610px;
+  right: 400px;
+  z-index: -1;
+  animation-name: boat-cycle;
+  animation-duration: 50s;
+  animation-delay: 3s;
+}
+@keyframes boat-cycle {
+  from {
+    top: 610px;
+    right: 400px;
+  }
+  to {
+    top: -72px;
+    right: 610px;
+  }
+}
+
 .bird {
-  background-image: url("../img/bird-cells_white.svg");
+  background-image: url('../img/bird-cells_white.svg');
   background-size: auto 100%;
   width: 88px;
   height: 125px;
   will-change: background-position;
   -webkit-animation-name: fly-cycle;
-          animation-name: fly-cycle;
+  animation-name: fly-cycle;
   -webkit-animation-timing-function: steps(10);
-          animation-timing-function: steps(10);
+  animation-timing-function: steps(10);
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 .bird--one {
   -webkit-animation-duration: 1s;
-          animation-duration: 1s;
+  animation-duration: 1s;
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 
 .bird--two {
   -webkit-animation-duration: 0.9s;
-          animation-duration: 0.9s;
+  animation-duration: 0.9s;
   -webkit-animation-delay: -0.75s;
-          animation-delay: -0.75s;
+  animation-delay: -0.75s;
 }
 
 .bird--three {
   -webkit-animation-duration: 1.25s;
-          animation-duration: 1.25s;
+  animation-duration: 1.25s;
   -webkit-animation-delay: -0.25s;
-          animation-delay: -0.25s;
+  animation-delay: -0.25s;
 }
 
 .bird--four {
   -webkit-animation-duration: 1.1s;
-          animation-duration: 1.1s;
+  animation-duration: 1.1s;
   -webkit-animation-delay: -0.5s;
-          animation-delay: -0.5s;
+  animation-delay: -0.5s;
 }
 
 .bird-container {
@@ -105,42 +132,42 @@ footer .footer-dark ul li::after {
   top: 20%;
   left: -10%;
   -webkit-transform: scale(0) translateX(-10vw);
-          transform: scale(0) translateX(-10vw);
+  transform: scale(0) translateX(-10vw);
   will-change: transform;
   -webkit-animation-name: fly-right-one;
-          animation-name: fly-right-one;
+  animation-name: fly-right-one;
   -webkit-animation-timing-function: linear;
-          animation-timing-function: linear;
+  animation-timing-function: linear;
   -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
 }
 
 .bird-container--one {
   -webkit-animation-duration: 15s;
-          animation-duration: 15s;
+  animation-duration: 15s;
   -webkit-animation-delay: 0;
-          animation-delay: 0;
+  animation-delay: 0;
 }
 
 .bird-container--two {
   -webkit-animation-duration: 16s;
-          animation-duration: 16s;
+  animation-duration: 16s;
   -webkit-animation-delay: 1s;
-          animation-delay: 1s;
+  animation-delay: 1s;
 }
 
 .bird-container--three {
   -webkit-animation-duration: 14.6s;
-          animation-duration: 14.6s;
+  animation-duration: 14.6s;
   -webkit-animation-delay: 9.5s;
-          animation-delay: 9.5s;
+  animation-delay: 9.5s;
 }
 
 .bird-container--four {
   -webkit-animation-duration: 16s;
-          animation-duration: 16s;
+  animation-duration: 16s;
   -webkit-animation-delay: 10.25s;
-          animation-delay: 10.25s;
+  animation-delay: 10.25s;
 }
 
 @-webkit-keyframes fly-cycle {
@@ -158,140 +185,140 @@ footer .footer-dark ul li::after {
 @-webkit-keyframes fly-right-one {
   0% {
     -webkit-transform: scale(0.3) translateX(-10vw);
-            transform: scale(0.3) translateX(-10vw);
+    transform: scale(0.3) translateX(-10vw);
   }
   10% {
     -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
-            transform: translateY(2vh) translateX(10vw) scale(0.4);
+    transform: translateY(2vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
-            transform: translateY(0vh) translateX(30vw) scale(0.5);
+    transform: translateY(0vh) translateX(30vw) scale(0.5);
   }
   30% {
     -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
-            transform: translateY(4vh) translateX(50vw) scale(0.6);
+    transform: translateY(4vh) translateX(50vw) scale(0.6);
   }
   40% {
     -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
-            transform: translateY(2vh) translateX(70vw) scale(0.6);
+    transform: translateY(2vh) translateX(70vw) scale(0.6);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
-            transform: translateY(0vh) translateX(90vw) scale(0.6);
+    transform: translateY(0vh) translateX(90vw) scale(0.6);
   }
   60% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
 
 @keyframes fly-right-one {
   0% {
     -webkit-transform: scale(0.3) translateX(-10vw);
-            transform: scale(0.3) translateX(-10vw);
+    transform: scale(0.3) translateX(-10vw);
   }
   10% {
     -webkit-transform: translateY(2vh) translateX(10vw) scale(0.4);
-            transform: translateY(2vh) translateX(10vw) scale(0.4);
+    transform: translateY(2vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(0vh) translateX(30vw) scale(0.5);
-            transform: translateY(0vh) translateX(30vw) scale(0.5);
+    transform: translateY(0vh) translateX(30vw) scale(0.5);
   }
   30% {
     -webkit-transform: translateY(4vh) translateX(50vw) scale(0.6);
-            transform: translateY(4vh) translateX(50vw) scale(0.6);
+    transform: translateY(4vh) translateX(50vw) scale(0.6);
   }
   40% {
     -webkit-transform: translateY(2vh) translateX(70vw) scale(0.6);
-            transform: translateY(2vh) translateX(70vw) scale(0.6);
+    transform: translateY(2vh) translateX(70vw) scale(0.6);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.6);
-            transform: translateY(0vh) translateX(90vw) scale(0.6);
+    transform: translateY(0vh) translateX(90vw) scale(0.6);
   }
   60% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.6);
-            transform: translateY(0vh) translateX(110vw) scale(0.6);
+    transform: translateY(0vh) translateX(110vw) scale(0.6);
   }
 }
 
 @-webkit-keyframes fly-right-two {
   0% {
     -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-            transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    transform: translateY(-2vh) translateX(-10vw) scale(0.5);
   }
   10% {
     -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
-            transform: translateY(0vh) translateX(10vw) scale(0.4);
+    transform: translateY(0vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
-            transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    transform: translateY(-4vh) translateX(30vw) scale(0.6);
   }
   30% {
     -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
-            transform: translateY(1vh) translateX(50vw) scale(0.45);
+    transform: translateY(1vh) translateX(50vw) scale(0.45);
   }
   40% {
     -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-            transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
-            transform: translateY(0vh) translateX(90vw) scale(0.45);
+    transform: translateY(0vh) translateX(90vw) scale(0.45);
   }
   51% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
 }
 
 @keyframes fly-right-two {
   0% {
     -webkit-transform: translateY(-2vh) translateX(-10vw) scale(0.5);
-            transform: translateY(-2vh) translateX(-10vw) scale(0.5);
+    transform: translateY(-2vh) translateX(-10vw) scale(0.5);
   }
   10% {
     -webkit-transform: translateY(0vh) translateX(10vw) scale(0.4);
-            transform: translateY(0vh) translateX(10vw) scale(0.4);
+    transform: translateY(0vh) translateX(10vw) scale(0.4);
   }
   20% {
     -webkit-transform: translateY(-4vh) translateX(30vw) scale(0.6);
-            transform: translateY(-4vh) translateX(30vw) scale(0.6);
+    transform: translateY(-4vh) translateX(30vw) scale(0.6);
   }
   30% {
     -webkit-transform: translateY(1vh) translateX(50vw) scale(0.45);
-            transform: translateY(1vh) translateX(50vw) scale(0.45);
+    transform: translateY(1vh) translateX(50vw) scale(0.45);
   }
   40% {
     -webkit-transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
-            transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
+    transform: translateY(-2.5vh) translateX(70vw) scale(0.5);
   }
   50% {
     -webkit-transform: translateY(0vh) translateX(90vw) scale(0.45);
-            transform: translateY(0vh) translateX(90vw) scale(0.45);
+    transform: translateY(0vh) translateX(90vw) scale(0.45);
   }
   51% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
   100% {
     -webkit-transform: translateY(0vh) translateX(110vw) scale(0.45);
-            transform: translateY(0vh) translateX(110vw) scale(0.45);
+    transform: translateY(0vh) translateX(110vw) scale(0.45);
   }
 }
 /*# sourceMappingURL=ocean.css.map */
