--- a/css/sakura.css
+++ b/css/sakura.css
@@ -9,22 +9,18 @@
 }
 
 #sakura {
-  background-image: url("../img/sakura2in2.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
   background-image: url("../img/sakura2in2.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
   background-attachment: fixed;
 }
-
 #sakura .ml16 i {
   color: #ffb9c8;
 }
 
 .flip-content-back {
-  background-image: url("../img/sakura2in2.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
   background-image: url("../img/sakura2in2.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
   background-size: cover;
   background-position: center center;
 }
-
 .flip-content-back ul li:hover {
   background: rgba(255, 185, 200, 0.75);
 }
@@ -35,7 +31,6 @@
   border-bottom: 10px solid #ffb9c8;
   background-attachment: fixed;
 }
-
 .contact-me button {
   background-color: #ffb9c8;
 }
@@ -54,8 +49,6 @@ footer .footer-dark ul li::after {
 
 @media (max-width: 662px) {
   #sakura {
-    background-image: url("../img/sakura2_flipped.jpg"), -webkit-gradient(linear, left top, left bottom, from(#D0E5F3), to(#B7D7EC));
     background-image: url("../img/sakura2_flipped.jpg"), linear-gradient(#D0E5F3, #B7D7EC);
   }
-}
-/*# sourceMappingURL=sakura.css.map */
+}/*# sourceMappingURL=sakura.css.map */
