--- a/css/style.scss
+++ b/css/style.scss
@@ -209,8 +209,7 @@ body {
       padding: 20px 0;
       #carouselExampleIndicators {
         height: fit-content;
-        padding: 10px 0 0 0;
-        height: 200px;
+        padding: 10px 0px 40px;
         .carousel-indicators {
           li {
             background-color: #c03e3e;
@@ -233,6 +232,7 @@ body {
       .skills {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
         .skill {
           width: 100px;
           margin-right: 3%;
@@ -843,13 +843,13 @@ body {
 }
 
 // Adaptation
-@media (max-width: 1300px) {
+@media (max-width: 1100px) {
   body {
     .projects-main {
       .my-projects {
         .project-block {
           display: block;
-          padding: 20px 0;
+          padding: 40px;
           overflow: auto;
           .hover_place {
             width: 100%;
