--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -1,5 +1,5 @@
 .section_2 {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -25,7 +25,7 @@
 }
 .section_2 .active.fade-bottom {
   animation: fade-bottom 0.5s ease-in;
-  height: 100vh;
+  height: 100dvh;
 }
 @keyframes fade-bottom {
   0% {
