--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -1,5 +1,5 @@
 .section_4 {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -271,7 +271,7 @@
 }
 @media screen and (max-width: 660px) {
   .modal_box {
-    height: 95vh;
+    height: 95dvh;
     overflow-y: scroll;
     justify-content: flex-start;
   }
