--- a/src/styles/scss/App.scss
+++ b/src/styles/scss/App.scss
@@ -6,7 +6,7 @@
   font-family: 'Yatra One', cursive;
 }
 #main_container {
-  height: 100vh;
+  height: 100dvh;
 
   & > * {
     box-sizing: border-box;
