--- a/src/styles/css/headbox.css
+++ b/src/styles/css/headbox.css
@@ -11,7 +11,7 @@
   box-sizing: border-box;
 }
 .head-box h1 {
-  font-size: 9vh;
+  font-size: 9dvh;
   color: #fff;
   display: flex;
   justify-content: center;
@@ -22,7 +22,7 @@
   margin: 0;
 }
 .head-box p {
-  font-size: 3vh;
+  font-size: 3dvh;
   text-align: center;
   color: #fff;
 }
@@ -34,7 +34,7 @@
   box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
   box-sizing: border-box;
   color: #fff;
-  font-size: 2vh;
+  font-size: 2dvh;
   cursor: pointer;
   display: flex;
   align-items: center;
