--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -1,5 +1,5 @@
 .section_2 {
-  height: 100vh;
+  height: 100dvh;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -26,7 +26,7 @@
   }
   .active.fade-bottom {
     animation: fade-bottom 0.5s ease-in;
-    height: 100vh;
+    height: 100dvh;
   }
   @keyframes fade-bottom {
     0% {
