--- a/src/styles/scss/entry.scss
+++ b/src/styles/scss/entry.scss
@@ -11,7 +11,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   display: flex;
   align-items: center;
   justify-content: center;
