--- a/src/styles/scss/navbar.scss
+++ b/src/styles/scss/navbar.scss
@@ -9,10 +9,10 @@ audio {
   padding: 20px;
 }
 nav {
-  font-size: 2vh;
+  font-size: 2dvh;
 
   .navbar-brand {
-    font-size: 2.5vh;
+    font-size: 2.5dvh;
     text-transform: uppercase;
     color: #fff;
     cursor: pointer;
