--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -1,38 +1,38 @@
 .section_4 {
-  height: 100dvh;
-  width: 100%;
-  display: flex;
-  justify-content: center;
   align-items: center;
-  position: relative;
+  display: flex;
   flex-direction: column;
+  height: 100dvh;
+  justify-content: center;
+  position: relative;
+  width: 100%;
 }
 .section_4 span {
   color: #fff;
   font-size: 80px;
 }
 .section_4 .all_projects {
-  display: flex;
-  overflow-y: scroll;
   align-items: center;
+  display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  overflow-y: scroll;
   padding: 0 20px;
 }
 .section_4 .all_projects::-webkit-scrollbar {
   display: none;
 }
 .section_4 .all_projects .project_block {
+  align-content: center;
+  color: #fff;
+  cursor: pointer;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-content: center;
+  max-width: 600px;
   padding: 20px;
-  cursor: pointer;
-  color: #fff;
   text-align: center;
   width: 100%;
-  max-width: 600px;
 }
 .section_4 .all_projects .project_block:hover {
   transition: ease transform 0.3s;
@@ -63,8 +63,8 @@
   width: 100%;
 }
 .section_4 .bottom-section {
-  display: flex;
   align-items: center;
+  display: flex;
   flex-direction: column;
   padding-bottom: 40px;
 }
@@ -84,15 +84,15 @@
 }
 .languages span {
   display: block;
-  margin: 5px 0;
-  font-weight: bold;
   font-size: 1.2em;
+  font-weight: bold;
+  margin: 5px 0;
 }
 .languages .skill-bar {
-  height: 20px;
-  width: 100%;
   display: flex;
+  height: 20px;
   margin-bottom: 15px;
+  width: 100%;
 }
 .languages .skill-bar div {
   height: inherit;
@@ -126,24 +126,24 @@
   background-color: #41b883;
 }
 .languages ul {
-  margin: 0;
-  padding: 0;
   display: flex;
   justify-content: center;
+  margin: 0;
+  padding: 0;
 }
 .languages ul li {
-  display: flex;
   align-items: center;
+  display: flex;
+  font-weight: bold;
   list-style: none;
   margin-right: 10px;
-  font-weight: bold;
 }
 .languages ul li div {
-  height: 10px;
-  width: 10px;
-  border-radius: 50%;
   background-color: #fff;
+  border-radius: 50%;
+  height: 10px;
   margin-right: 10px;
+  width: 10px;
 }
 .languages ul li .py {
   background-color: #3572a5;
@@ -165,26 +165,28 @@
 }
 
 .modal_box {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  display: flex;
+  -moz-box-shadow: 0px 0px 19px -2px rgb(0, 0, 0);
+  -webkit-box-shadow: 0px 0px 19px -2px rgb(0, 0, 0);
   align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 40px;
-  width: 90%;
-  height: auto;
-  color: #fff;
   background: #2e2a2a;
   border-radius: 25px;
   box-shadow: 0px 0px 19px -2px rgb(0, 0, 0);
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  justify-content: center;
+  left: 50%;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
 }
 .modal_box .box_content {
+  align-items: center;
   display: flex;
   justify-content: space-between;
-  align-items: center;
 }
 .modal_box .box_content .left_box {
   display: flex;
@@ -197,10 +199,10 @@
   margin-left: 20px;
 }
 .modal_box .box_content .right_box .project_links {
-  width: 100%;
+  align-items: center;
   display: flex;
   justify-content: center;
-  align-items: center;
+  width: 100%;
 }
 .modal_box .box_content .right_box .project_links ul {
   display: flex;
@@ -211,12 +213,12 @@
   list-style-type: none;
 }
 .modal_box .box_content .right_box .project_links ul li a {
-  text-decoration: none;
-  display: block;
-  color: #fff;
-  padding: 10px 40px;
   border-radius: 12px;
   border: 1px solid #fff;
+  color: #fff;
+  display: block;
+  padding: 10px 40px;
+  text-decoration: none;
   transition: all 0.1s ease;
   width: 180px;
 }
@@ -240,8 +242,8 @@
 }
 .modal_box .new_img {
   position: absolute;
-  top: 0;
   right: 0;
+  top: 0;
   width: 100px;
   z-index: 999;
 }
