--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -3,6 +3,7 @@
   display: flex;
   display: flex;
   height: 100dvh;
+  transition: height 0.5s ease;
   justify-content: center;
   justify-content: space-between;
   overflow-y: scroll;
@@ -26,6 +27,7 @@
 .section_2 .active.fade-bottom {
   animation: fade-bottom 0.5s ease-in;
   height: 100dvh;
+  transition: height 0.5s ease;
 }
 @keyframes fade-bottom {
   0% {
@@ -102,9 +104,6 @@
     gap: 40px;
     justify-content: center;
   }
-  .section_2 #ed_img {
-    width: auto;
-  }
 }
 @media screen and (max-width: 460px) {
   .section_2 .boxes {
@@ -125,9 +124,5 @@
   }
   .section_2 .boxes .right-box .img-container {
     flex-direction: column;
-  }
-  .section_2 #ed_img {
-    left: -150%;
-    width: auto;
   }
 }/*# sourceMappingURL=education.css.map */
