--- a/src/styles/css/projects.css
+++ b/src/styles/css/projects.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  transition: height 0.5s ease;
   justify-content: center;
   position: relative;
   width: 100%;
@@ -274,6 +275,7 @@
 @media screen and (max-width: 660px) {
   .modal_box {
     height: 95dvh;
+    transition: height 0.5s ease;
     overflow-y: scroll;
     justify-content: flex-start;
   }
