--- a/src/styles/scss/entry.scss
+++ b/src/styles/scss/entry.scss
@@ -9,6 +9,8 @@
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  transition: height 0.5s ease;
+
   justify-content: center;
   left: 0;
   opacity: 1;
