--- a/src/styles/scss/projects.scss
+++ b/src/styles/scss/projects.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   height: 100dvh;
+  transition: height 0.5s ease;
+
   justify-content: center;
   position: relative;
   width: 100%;
@@ -277,6 +279,8 @@
 @media screen and (max-width: 660px) {
   .modal_box {
     height: 95dvh;
+    transition: height 0.5s ease;
+
     overflow-y: scroll;
     justify-content: flex-start;
     .box_content {
