--- a/src/styles/scss/sakura.scss
+++ b/src/styles/scss/sakura.scss
@@ -1,6 +1,8 @@
 .relative {
   position: relative;
   height: 100dvh;
+  transition: height 0.5s ease;
+
   width: 100%;
   .rocks {
     bottom: 0;
