--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -1,34 +1,119 @@
 .section_2 {
-  align-items: center;
   display: flex;
-  display: flex;
-  height: 100dvh;
-  transition: height 0.5s ease;
-  justify-content: center;
-  justify-content: space-between;
-  overflow-y: scroll;
-  position: relative;
-  width: 100%;
+  flex-direction: column;
 }
-.section_2::-webkit-scrollbar {
-  display: none;
+.section_2 #ed_img {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-size: cover;
+  width: 100%;
+  height: 100dvh;
+  z-index: -1;
 }
 .section_2 .boxes {
-  align-items: center;
-  display: flex;
-  gap: 7%;
-  justify-content: space-between;
   opacity: 0;
   width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding: 300px 0 100px 0;
 }
-.section_2 .boxes.active {
+.section_2 .boxes .left-box {
+  display: flex;
+  flex-direction: column;
+  margin-top: 80px;
+}
+.section_2 .boxes .left-box h1 {
+  color: #fff;
+  font-size: 4vw;
+}
+.section_2 .boxes .left-box .img-container {
+  display: flex;
+}
+.section_2 .boxes .left-box .img-container img {
+  width: 150px;
+}
+.section_2 .boxes .left-box .img-container .uw_title {
+  margin-left: 20px;
+  width: 200px;
+}
+.section_2 .boxes .right-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section_2 .boxes .right-box .img-container {
+  display: flex;
+  gap: 20px;
+}
+.section_2 .boxes .right-box .img-container a {
+  display: flex;
+  flex-direction: column;
+  transition: transform 0.5s ease;
+  margin-bottom: 20px;
+}
+.section_2 .boxes .right-box .img-container a .smallLogo {
+  width: 40px;
+  margin: auto;
+}
+.section_2 .boxes .right-box .img-container a .certificate {
+  box-shadow: 0 0 19px -2px #000;
+  width: 300px;
+}
+.section_2 .boxes .right-box .img-container a:hover {
+  transform: scale(1.2);
+}
+.section_2 .boxes.active,
+.section_2 .skillsbox.active {
   opacity: 1;
 }
-.section_2 .active.fade-bottom {
-  animation: fade-bottom 0.5s ease-in;
-  height: 100dvh;
-  transition: height 0.5s ease;
+.section_2 .skillsbox {
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  max-width: 900px;
+  margin: auto;
+  padding-bottom: 300px;
+  opacity: 0;
 }
+.section_2 .skillsbox h1 {
+  margin: auto;
+  color: #fff;
+  font-size: 4vw;
+  padding-top: 100px;
+}
+.section_2 .skillsbox .main-skills,
+.section_2 .skillsbox .other-skills {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px;
+  justify-content: center;
+}
+.section_2 .skillsbox .main-skills .skill-box,
+.section_2 .skillsbox .other-skills .skill-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.section_2 .skillsbox .main-skills .skill-box img,
+.section_2 .skillsbox .other-skills .skill-box img {
+  width: 75px;
+  height: 75px;
+  width: 100%;
+}
+.section_2 .skillsbox .main-skills .skill-box p,
+.section_2 .skillsbox .other-skills .skill-box p {
+  color: #fff;
+  margin-top: 10px;
+}
+
+.active.fade-bottom {
+  animation: fade-bottom 1s ease-in;
+  transition: height 1s ease;
+}
+
 @keyframes fade-bottom {
   0% {
     opacity: 0;
@@ -37,92 +122,5 @@
   100% {
     opacity: 1;
     transform: translateY(0);
-  }
-}
-.section_2 .left-box {
-  display: flex;
-  flex-direction: column;
-  padding: 0 80px;
-}
-.section_2 .left-box h4 {
-  color: #fff;
-  font-size: 4rem;
-  padding-bottom: 10px;
-}
-.section_2 .left-box .img-container {
-  display: flex;
-  justify-content: space-around;
-}
-.section_2 .left-box .img-container img {
-  padding-bottom: 10px;
-  width: 8rem;
-}
-.section_2 .left-box .img-container .uw_title {
-  width: 10rem;
-}
-.section_2 .right-box {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding: 0 40px;
-}
-.section_2 .right-box .img-container {
-  display: flex;
-  padding-bottom: 20px;
-}
-.section_2 .right-box .img-container .img_certificate {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  transition: transform 0.5s;
-}
-.section_2 .right-box .img-container .img_certificate .smallLogo {
-  width: 50px;
-}
-.section_2 .right-box .img-container .img_certificate .certificate {
-  box-shadow: 0px 0px 19px -2px rgb(0, 0, 0);
-  max-width: 500px;
-  min-width: 100px;
-  width: 100%;
-}
-.section_2 .right-box .img-container .img_certificate:hover {
-  transform: scale(1.1);
-}
-.section_2 #ed_img {
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: -1;
-}
-
-@media screen and (max-width: 1024px) {
-  .section_2 .boxes {
-    flex-direction: column;
-    gap: 40px;
-    justify-content: center;
-  }
-}
-@media screen and (max-width: 460px) {
-  .section_2 .boxes {
-    justify-content: space-between;
-  }
-  .section_2 .boxes .left-box {
-    padding: 40px 0 0 0;
-  }
-  .section_2 .boxes .left-box h4 {
-    font-size: 15vw;
-    margin: auto;
-  }
-  .section_2 .boxes .left-box .img-container {
-    display: none;
-  }
-  .section_2 .boxes .right-box {
-    padding-bottom: 40px;
-  }
-  .section_2 .boxes .right-box .img-container {
-    flex-direction: column;
   }
 }/*# sourceMappingURL=education.css.map */
