--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -1,136 +1,124 @@
 .section_2 {
-  align-items: center;
   display: flex;
-  display: flex;
-  height: 100dvh;
-  transition: height 0.5s ease;
-  justify-content: center;
-  justify-content: space-between;
-  overflow-y: scroll;
-  position: relative;
-  width: 100%;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-
-  .boxes {
-    align-items: center;
-    display: flex;
-    gap: 7%;
-    justify-content: space-between;
-    opacity: 0;
-    width: 100%;
-  }
-
-  .boxes.active {
-    opacity: 1;
-  }
-  .active.fade-bottom {
-    animation: fade-bottom 0.5s ease-in;
-    height: 100dvh;
-    transition: height 0.5s ease;
-  }
-  @keyframes fade-bottom {
-    0% {
-      opacity: 0;
-      transform: translateY(450px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
-  }
-
-  .left-box {
-    display: flex;
-    flex-direction: column;
-    padding: 0 80px;
-    h4 {
-      color: #fff;
-      font-size: 4rem;
-      padding-bottom: 10px;
-    }
-    .img-container {
-      display: flex;
-      justify-content: space-around;
-      img {
-        padding-bottom: 10px;
-        width: 8rem;
-      }
-      .uw_title {
-        width: 10rem;
-      }
-    }
-  }
-  .right-box {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding: 0 40px;
-    .img-container {
-      display: flex;
-      padding-bottom: 20px;
-      .img_certificate {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
-        padding: 10px;
-        transition: transform 0.5s;
-        .smallLogo {
-          width: 50px;
-        }
-        .certificate {
-          -moz-box-shadow: 0px 0px 19px -2px rgba(0, 0, 0, 1);
-          -webkit-box-shadow: 0px 0px 19px -2px rgba(0, 0, 0, 1);
-          box-shadow: 0px 0px 19px -2px rgba(0, 0, 0, 1);
-          max-width: 500px;
-          min-width: 100px;
-          width: 100%;
-        }
-        &:hover {
-          transform: scale(1.1);
-        }
-      }
-    }
-  }
+  flex-direction: column;
   #ed_img {
-    height: 100%;
-    left: 0;
     position: fixed;
     top: 0;
+    left: 0;
+    background-size: cover;
     width: 100%;
+    height: 100dvh;
     z-index: -1;
   }
-}
-@media screen and (max-width: 1024px) {
-  .section_2 {
-    .boxes {
+  .boxes {
+    opacity: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    padding: 300px 0 100px 0;
+    .left-box {
+      display: flex;
       flex-direction: column;
+      margin-top: 80px;
+      h1 {
+        color: #fff;
+        font-size: 4vw;
+      }
+
+      .img-container {
+        display: flex;
+        img {
+          width: 150px;
+        }
+        .uw_title {
+          margin-left: 20px;
+          width: 200px;
+        }
+      }
+    }
+    .right-box {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      .img-container {
+        display: flex;
+        gap: 20px;
+        a {
+          display: flex;
+          flex-direction: column;
+          transition: transform 0.5s ease;
+          margin-bottom: 20px;
+          .smallLogo {
+            width: 40px;
+            margin: auto;
+          }
+          .certificate {
+            box-shadow: 0 0 19px -2px #000;
+            width: 300px;
+          }
+          &:hover {
+            transform: scale(1.2);
+          }
+        }
+      }
+    }
+  }
+  .boxes.active,
+  .skillsbox.active {
+    opacity: 1;
+  }
+  .skillsbox {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    max-width: 900px;
+    margin: auto;
+    padding-bottom: 300px;
+    opacity: 0;
+    h1 {
+      margin: auto;
+      color: #fff;
+      font-size: 4vw;
+      padding-top: 100px;
+    }
+    .main-skills,
+    .other-skills {
+      align-items: center;
+      display: flex;
+      flex-wrap: wrap;
       gap: 40px;
       justify-content: center;
+
+      .skill-box {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        img {
+          width: 75px;
+          height: 75px;
+          width: 100%;
+        }
+        p {
+          color: #fff;
+          margin-top: 10px;
+        }
+      }
     }
   }
 }
-@media screen and (max-width: 460px) {
-  .section_2 {
-    .boxes {
-      justify-content: space-between;
-      .left-box {
-        padding: 40px 0 0 0;
-        h4 {
-          font-size: 15vw;
-          margin: auto;
-        }
-        .img-container {
-          display: none;
-        }
-      }
-      .right-box {
-        padding-bottom: 40px;
-        .img-container {
-          flex-direction: column;
-        }
-      }
-    }
+
+.active.fade-bottom {
+  animation: fade-bottom 1s ease-in;
+  transition: height 1s ease;
+}
+@keyframes fade-bottom {
+  0% {
+    opacity: 0;
+    transform: translateY(450px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
